--- a/VFW/Flanagan_Kevin_Project2/CSS/styles.css
+++ b/VFW/Flanagan_Kevin_Project2/CSS/styles.css
@@ -4,6 +4,6 @@ Project:	Web App Part 2
 Class:		VFW 1209
 */
 
-body{font-family:Arial, Helvetica, san-serif;width: 571px;margin: auto;padding 10px;}
+body{font-family:Arial, Helvetica, san-serif;width: 571px;margin: auto;padding: 10px;}
 #content{width: 480px;height: 690px;overflow: scroll;}
 
