--- a/VFW/Flanagan_Kevin_Project3/CSS/styles.css
+++ b/VFW/Flanagan_Kevin_Project3/CSS/styles.css
@@ -1,12 +1,12 @@
 /*
 By:			Kevin Flanagan
-Project:	Web App Part 2
+Project:	Web App Part 3
 Class:		VFW 1209
 */
 
 
 body{font-family:Arial, Helvetica, san-serif;width: 485px;margin: auto;padding: 10px;}
-#content{width: 480px;height: 690px;}
+#content{width: 320px;height: 690px;}
 
 html {
 	background: #c3c3c3;
@@ -18,11 +18,15 @@ header {
 	text-align: center;
 }
 
+form {
+	background-color: #c1c1c1;
+}
+
 h1 {
 	margin: 5px;
 	padding: 10px;
 	text-align: center;
-	font-size: 20px;
+	font-size: 35px;
 	font: Helvetica 1.2em;
 }
 
